// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpCenters reducer createHelpCenter action should add a new help center to the state 1`] = `
{
  "helpCentersById": {
    "1": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-1",
      "algolia_index_name": "my-algolia-index-1",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 1,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme",
      "supported_locales": [
        "en-US",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "1",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
      "wizard": {
        "step_name": "automate",
      },
    },
  },
}
`;

exports[`helpCenters reducer deleteHelpCenter action should delete a help center from the state 1`] = `
{
  "helpCentersById": {
    "2": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-2",
      "algolia_index_name": "my-algolia-index-2",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 2,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme2",
      "supported_locales": [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "2",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer fetchHelpCenter action should add a new help center to the state 1`] = `
{
  "helpCentersById": {
    "1": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-1",
      "algolia_index_name": "my-algolia-index-1",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 1,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme",
      "supported_locales": [
        "en-US",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "1",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
      "wizard": {
        "step_name": "automate",
      },
    },
  },
}
`;

exports[`helpCenters reducer fetchHelpCenters action should add the help centers to the state 1`] = `
{
  "helpCentersById": {
    "1": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-1",
      "algolia_index_name": "my-algolia-index-1",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 1,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme",
      "supported_locales": [
        "en-US",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "1",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
      "wizard": {
        "step_name": "automate",
      },
    },
    "2": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-2",
      "algolia_index_name": "my-algolia-index-2",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 2,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme2",
      "supported_locales": [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "2",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
    "3": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-3",
      "algolia_index_name": "my-algolia-index-3",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:23:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "fr-FR",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 3,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center 3",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme3",
      "supported_locales": [
        "en-US",
        "fr-FR",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "3",
      "updated_datetime": "2021-05-17T18:23:42.022Z",
    },
    "4": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-4",
      "algolia_index_name": "my-algolia-index-4",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:23:42.022Z",
      "deactivated_datetime": "2021-05-17T18:23:42.022Z",
      "default_locale": "fr-FR",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 4,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center 4",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme4",
      "supported_locales": [
        "en-US",
        "fr-FR",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "4",
      "updated_datetime": "2021-05-17T18:23:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer updateHelpCenter action should replace an existing help center in the state 1`] = `
{
  "helpCentersById": {
    "1": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-1",
      "algolia_index_name": "my-algolia-index-1",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 1,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "bar",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme",
      "supported_locales": [
        "en-US",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "1",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
      "wizard": {
        "step_name": "automate",
      },
    },
    "2": {
      "account_id": 1,
      "algolia_api_key": null,
      "algolia_app_id": "my-algolia-app-id-2",
      "algolia_index_name": "my-algolia-index-2",
      "automation_settings_id": null,
      "code_snippet_template": "<script...></script><div></div>",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "email_integration": null,
      "gaid": null,
      "id": 2,
      "integration_id": null,
      "layout": "default",
      "main_embedment_base_url": null,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_integration_id": null,
      "shop_name": null,
      "source": "manual",
      "subdomain": "acme2",
      "supported_locales": [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "type": "faq",
      "uid": "2",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
  },
}
`;
